# landgod

./: .gitignore  .npmignore  AzuriteConfig  Makefile  QUICKSTART.md  README.md  __azurite_db_table__.json  forge.config.ts  package-lock.json  package.json  vite.headless.config.ts  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
docs/: 02-gateway-api.md  04-deploy-gateway.md  05-deploy-worker.md  07-npm-publish.md  08-domain-glossary.md  09-semantic-alignment-audit.md  10-worker-mcp-discovery-sequence.md  11-mcp-directory-autodiscovery-design.md  12-gateway-architecture.md  13-gateway-technical-guide.md  14-landgod-mcphub-positioning.md  15-credential-broker-mvp.md  16-enterprise-pitch-script.md  17-product-business-enterprise-review.md  18-agent-injection-defense-and-credential-boundary.md  18-latest-enterprise-pitch-and-architecture.md  18-technical-architecture-review.md  19-technical-architecture-harness-and-design-review.md  20-local-browser-vs-landgod-mcphub-desktop.md  21-personal-agent-pitch.md  README.md  gui-vs-headless.md  landgod-enterprise-architecture-diagrams.html  landgod-enterprise-execution-harness.html  landgod-personal-agent-pitch.html  landgod-personal-local-tools-architecture.html  landgod-workiq-origin-pitch.html  rca-playwright-mcp-deadlock.md
downloads/: QUICKSTART-GATEWAY.md  QUICKSTART-WINDOWS-DESKTOP.md  QUICKSTART-WORKER.md  landgod-0.1.10.tgz  landgod-0.1.11.tgz  (+26 more)
gateway/python-gateway/: pyproject.toml
gateway/python-gateway/landgod_gateway_server/: cluster.py  gateway.py  http_handler.py  ws_handler.py
gateway/python-gateway/tests/: test_gateway.py
gateway/python-sdk/: pyproject.toml
gateway/python-sdk/landgod_gateway/: __init__.py
mcp-servers/pptx-editor/: landgod.mcp.json  pyproject.toml
mcp-servers/pptx-editor/csharp_host/PptInteropHost/: Program.cs
mcp-servers/pptx-editor/landgod_pptx_editor/: __init__.py  __main__.py  ppt_backend.py  pptx_editor_com.py  pptx_editor_llm.py
mcp-servers/pptx-editor/references/: PptEditorBridge.bas
(+78 files in other folders)
