[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landgod-gateway-server"
version = "0.1.3"
description = "Python implementation of LandGod Gateway (WebSocket + HTTP API)"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "websockets>=12.0",
    "cryptography>=42.0",
    "redis[hiredis]>=5.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "aioresponses"]

[project.scripts]
landgod-gateway-py = "landgod_gateway_server.__main__:main"

[tool.setuptools.packages.find]
include = ["landgod_gateway_server*"]
