[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landgod-gateway"
version = "0.1.3"
description = "LandGod Link — Python SDK for AI Agent remote device management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["ai", "agent", "mcp", "remote", "device-management", "landgod"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
redis = ["redis>=4.0.0"]

[project.urls]
Homepage = "https://github.com/zhou12138/cli-server"
